welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:16: error: reassignment to val
			else if (a=b)
                                  ^loneTeen:16: error: type mismatch;
 found   : Unit
 required: Boolean
			else if (a=b)
                             ^